--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: ggFancyR
+Package: ggArtsyR
 Type: Package
 Title: Add Some Van Gogh Colors and Overlay Colors On Your `ggplot()`
 Version: 0.1.0
