--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R: c(
   person("Tess", "Goldmann", email = "tgoldmann@smith.edu", role = "aut")
     )
 Maintainer: Katelyn Diaz <katndiaz@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: ggArtsyR package works with `ggplot2()` to add an additional color palette to the user’s repertoire.
+ It also has a function that work alongside `ggplot2()` to create more interesting data visualizations and add contextual information to the user’s plots.
+License: CC0
 Encoding: UTF-8
 LazyData: true
 Depends: 
@@ -19,7 +19,6 @@ RoxygenNote: 7.1.2
 Imports:
   purrr,
   stringr,
-  testthat
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
