--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ RoxygenNote: 7.1.2
 Imports:
   purrr,
   stringr,
+  dplyr,
+  tidyverse,
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
