--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Imports:
   tidyverse,
   ggplot2,
   forcats,
-  tibble
+  tibble,
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
