--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,7 @@ Imports:
   tibble,
   magrittr,
 Suggests: 
+    knitr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
