- Readded dplyr to imports and namespace - Passed devtools::check()
0 errors | 0 warnings | 0 notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(gogh_palettes_pop)
 export(rgbToHex)
 export(scale_color_gogh)
 export(scale_fill_gogh)
+import(dplyr)
 importFrom(magrittr,"%>%")
