--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,14 +16,15 @@ Encoding: UTF-8
 LazyData: true
 Depends: 
     R (>= 2.10)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Imports:
   purrr,
   stringr,
   ggplot2,
   tibble,
   magrittr,
-  grDevices
+  grDevices,
+  dplyr
 Suggests: 
     knitr,
     testthat (>= 3.0.0)
