--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,9 @@ Imports:
   tibble,
   magrittr,
   grDevices,
-  dplyr,
-  rmarkdown
+  dplyr
 Suggests: 
+    rmarkdown,
     knitr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
