--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -10,9 +10,9 @@ name: R
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, CRAN ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, CRAN ]
 
 permissions:
   contents: read
