--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggRtsy
 Type: Package
-Title: Add Some Van Gogh Colors and Overlay Colors on Your `ggplot()`
+Title: Add Some Van Gogh Colors and Overlay Colors on Your 'ggplot()'
 Version: 0.1.0
 Authors@R: c(
   person("Katelyn", "Diaz", email = "katndiaz@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6108-1682")),
@@ -9,8 +9,8 @@ Authors@R: c(
   person("Aushanae", "Haller", email = "aushanaenhaller@gmail.com", role = "edt", comment = c(ORCID = "0000-0002-2090-1952"))
     )
 Maintainer: Katelyn Diaz <katndiaz@gmail.com>
-Description: Works with `ggplot2()` to add a Van Gogh color palette to the user’s repertoire.
- It also has a function that work alongside `ggplot2()` to create more interesting data visualizations and add contextual information to the user’s plots.
+Description: Works with 'ggplot2()' to add a Van Gogh color palette to the user’s repertoire.
+ It also has a function that work alongside 'ggplot2()' to create more interesting data visualizations and add contextual information to the user’s plots.
 License: CC0
 Encoding: UTF-8
 LazyData: true
