--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Authors@R: c(
   person("Katelyn", "Diaz", email = "katndiaz@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6108-1682")),
   person("Silas", "Weden", email = "sweden@smith.edu", role = "aut"),
   person("Tess", "Goldmann", email = "tgoldmann@smith.edu", role = "aut"),
-  person("Aushanae", "Haller", email = "aushanaenhaller@gmail.com", role = "edt", comment = c(ORCID = "0000-0002-2090-1952"))
+  person("Aushanae", "Haller", email = "aushanaenhaller@gmail.com", role = "edt", comment = c(ORCID = "0000-0002-2090-1952")),
+  person("Kathleen", "Hablutzel", email = "krhablutzel@gmail.com", role = "edt", comment = c(ORCID = "0000-0002-7802-6353"))
     )
 Maintainer: Katelyn Diaz <katndiaz@gmail.com>
 Description: Works with 'ggplot2()' to add a Van Gogh color palette to the user’s repertoire.
